--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "@types/node": "^8.0.28",
     "@types/socket.io": "^1.4.30",
     "express": "^4.15.4",
+    "jsonist": "^2.1.0",
     "socket.io": "^2.0.3",
-    "socketio-jwt-auth": "0.0.5"
+    "socketio-jwt-auth": "github:Federkun/socketio-jwt-auth#c4e1df03c98dca418461ba8772ff04c535eabe05"
   },
   "devDependencies": {
     "@types/mocha": "^2.2.43",
